[package]
name = "Helloworldsampleenclave"
version = "1.0.0"

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
vdso-time = { path = "../../../../vdso-time", default-features = false, features = ["sgx"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../../third_parties/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../../../../third_parties/incubator-teaclave-sgx-sdk/sgx_tstd", features = ["backtrace", "thread"] }
sgx_trts = { path = "../../../../third_parties/incubator-teaclave-sgx-sdk/sgx_trts" }
sgx_libc = { path = "../../../../third_parties/incubator-teaclave-sgx-sdk/sgx_libc" }

[workspace]